// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Untabbable should also disable the container when \`includeContainer\` is true 1`] = `
<div
  tabindex="-1"
>
  <button
    tabindex="-1"
  >
    First
  </button>
  <button
    tabindex="-1"
  >
    Second
  </button>
</div>
`;

exports[`Untabbable should not alter the tabindex when \`disabled\` is true 1`] = `
<div
  tabindex="0"
>
  <button>
    First
  </button>
  <button>
    Second
  </button>
</div>
`;

exports[`Untabbable should not only support elements but also any type of node 1`] = `
<div
  tabindex="-1"
>
  <button
    tabindex="-1"
  >
    First
  </button>
</div>
`;

exports[`Untabbable should restore the previous tabindex when disabled 1`] = `
<div
  tabindex="0"
>
  <button
    tabindex="2"
  >
    First
  </button>
  <button>
    Second
  </button>
</div>
`;

exports[`Untabbable should set the focusable children with tabindex=-1 1`] = `
<div
  tabindex="-1"
>
  <button
    tabindex="-1"
  >
    First
  </button>
  <button
    tabindex="-1"
  >
    Second
  </button>
</div>
`;

exports[`Untabbable should treat all direct children as containers 1`] = `
<div
  tabindex="-1"
>
  <button
    tabindex="-1"
  >
    First
  </button>
</div>
`;
